# PythonDiscordBot

./: .breakpoints  README.md  commands.py  embed.py  keep_alive.py  main.py  old_main.py  pyproject.toml  reactionrole.py  role_controller.py
static/: style.css
static/css/: style.css
static/js/: script.js
templates/: _example_site.html  debugging.html  index.html  options.html  stats.html  style.css  test.html
