[tool.poetry]
name = "repl_python3_FamiliarFoolishConfigfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
youtube_dl = "^2021.6.6"
ffmpeg = "^1.4"
Flask-Bootstrap = "^3.3.7"
Flask-WTF = "^1.0.0"
WTForms = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
